Update email templates

--- a/templates/account/email/forgot_password_openid.html
+++ b/templates/account/email/forgot_password_openid.html
@@ -1,15 +1,29 @@
-<p>Hello {{ user.fullname }},
+{% extends "account/email/base.html" %}
+
+{% block subject %}
+Password recovery
+{% endblock %}
+
+{% block subtitle %}
+Hello {{user['fullname']}},
+{% endblock %}
+
+{% block body %}
+<p>
+We received a request to recover your {{ config.BRAND }} password.
 </p>
-<p>We received a request to recover your password at {{ config.BRAND }}.
+<p>
+If you did not request this, please ignore this email.
 </p>
-<p>If you did not make this request please ignore this email.
-</p>
-<p>Our records show that you use your {{ account_name }} account to sign in. Please use
-the same account to sign-in again. If you forgot the password to your {{ account_name }}
+<p>
+Our records show that you use your {{ account_name }} account to sign in.
+Please use the same account to sign-in again. If you forgot the password to your {{ account_name }}
 account, please contact {{ account_name }}.
 </p>
-<p>Regards,<br />
-{{ config.BRAND }} Team</p>
-
-<hr>
-<p><a href="http://twitter.com/LibCrowds">Follow us on Twitter</a></p>
+<p>
+Regards,
+</p>
+<p>
+{{ config.BRAND }} Team
+</p>
+{% endblock %}
