--- a/templates/account/email/blogupdate.html
+++ b/templates/account/email/blogupdate.html
@@ -1,6 +1,15 @@
-<h2 class="null"><a href="{{url_for('blog.show_blogpost', id=blog.id, _external=True)}}">Project Update: {{blog['title']}}</a></h2>
-<section>{{blog['body'] | markdown }}</section>
+{% extends "account/email/base.html" %}
+
+{% block subject %}
+<a style="color: #52B290;" href="{{url_for('project.show_blogpost', short_name=blog.project.short_name, id=blog.id, _external=True)}}">Project Update: {{blog['project']['name']}}</a>
+{% endblock %}
+
+{% block subtitle %}
+{{blog['title']}} by {{blog['owner']['fullname']}}
+{% endblock %}
+
+{% block body %}
+{{blog['body'] | markdown }}
 <hr>
-<p><a href="{{url_for('account.update_profile', name=user_name, _external=True)}}">Update your notifications preferences</a></p>
 <hr>
-<p><a href="http://twitter.com/LibCrowds">Follow us on Twitter</a></p>
+{% endblock %}
