--- a/templates/account/email/forgot_password.html
+++ b/templates/account/email/forgot_password.html
@@ -1,13 +1,27 @@
-<p>Hello {{ user.fullname }},</p>
+{% extends "account/email/base.html" %}
 
-<p>To reset your {{ config.BRAND }} password, please visit the URL below:</p>
+{% block subject %}
+Password recovery
+{% endblock %}
 
-<p><a href="{{ recovery_url }}">{{ recovery_url }}</a></p>
+{% block subtitle %}
+Hello {{user['fullname']}},
+{% endblock %}
 
-<p>If you did not make a password reset request, please ignore this email.</p>
-
-<p>Regards,<br />
-{{ config.BRAND }} Team</p>
-
-<hr>
-<p><a href="http://twitter.com/LibCrowds">Follow us on Twitter</a></p>
+{% block body %}
+<p>
+We received a request to reset your {{ config.BRAND }} password.
+</p>
+<p>
+<a href="{{ recovery_url }}">Click here to reset your password.</a>
+</p>
+<p>
+If you did not make this request, please ignore this email.
+</p>
+<p>
+Regards,
+</p>
+<p>
+{{ config.BRAND }} Team
+</p>
+{% endblock %}
