--- a/templates/account/email/inactive_project.html
+++ b/templates/account/email/inactive_project.html
@@ -1,15 +1,22 @@
-<p>Dear {{ project.owner.fullname }},
-</p>
+{% extends "account/email/base.html" %}
+
+{% block subject %}
+Your project has been inactive for three months
+{% endblock %}
+
+{% block subtitle %}
+Hello {{user['fullname']}},
+{% endblock %}
+
+{% block body %}
 <p>Your project {{ project.name }} has been inactive for the last 3 months. And we would like to inform you that if you need help with it, just contact us answering to this email.
 </p>
 <p>Otherwise, we will archive the project, removing it from the server. You have one month to upload any new tasks, add a new blog post, or engage new volunteers.
 </p>
-<p>If at the end the project is deleted, we will send you a ZIP file where you can download your project.
+<p>If, at the end of one month, the project is deleted, we will send you a ZIP file where you can download your project.
 </p>
-
-<p>All the best,<br />
-{{ BRAND }} Team
+<p>All the best,
 </p>
-
-<hr>
-<p><a href="http://twitter.com/LibCrowds">Follow us on Twitter</a></p>
+<p>{{ config.BRAND }} Team
+</p>
+{% endblock %}
