--- a/templates/account/email/validate_account.html
+++ b/templates/account/email/validate_account.html
@@ -1,12 +1,31 @@
-<p>Hello {{ user['fullname'] }},
-</p>
-<p>Thank you for creating an account at {{ config.BRAND }}.
-To verify that you are the owner of this e-mail address, please visit the URL below:
+{% extends "account/email/base.html" %}
+
+{% block subject %}
+Validate your account
+{% endblock %}
+
+{% block subtitle %}
+Hello {{ user['fullname'] }},
+{% endblock %}
+
+{% block body %}
+<p>
+Thank you for creating a {{ config.BRAND }} account.
 </p>
 <p>
-    <a href="{{ confirm_url }}">{{ confirm_url }}</a>
+To complete your registration, please verify that you are the owner of this
+e-mail address by visiting the URL below:
 </p>
-<p>Best wishes,<br />
-{{ config.BRAND }} Team</p>
-<hr>
-<p><a href="http://twitter.com/LibCrowds">Follow us on Twitter</a></p>
+<p>
+<a href="{{confirm_url}}">{{ confirm_url }}</a>
+</p>
+<p>
+If you did not request this conformation, please ignore this email.
+</p>
+<p>
+{{ _('Regards') }},
+</p>
+<p>
+{{ config.BRAND }} {{ _('Team') }}
+</p>
+{% endblock %}
