--- a/templates/account/update.html
+++ b/templates/account/update.html
@@ -70,10 +70,10 @@
                             <h2 {% if form.errors %}name="profile"{%endif%}>Update your profile</h2>
                             {{ form.id }}
                             {{ form.hidden_tag() }}
-                            {{ form_helper.render_field_horizontal(form.fullname, placeholder= _('Full name'), class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters" ) }}
-                            {{ form_helper.render_field_horizontal(form.name, placeholder= _('Username'), class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters" ) }}
-                            {{ form_helper.render_field_horizontal(form.email_addr, placeholder= _('Email'), class="form-control", type="email" ) }}
-                            {{ form_helper.render_field_horizontal_checkbox(form.subscribed, class="form-control") }}
+                            {{ form_helper.render_field(form.fullname, visible='true', placeholder= _('Full name'), class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters" ) }}
+                            {{ form_helper.render_field(form.name, visible='true', placeholder= _('Username'), class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters" ) }}
+                            {{ form_helper.render_field(form.email_addr, visible='true', placeholder= _('Email'), class="form-control", type="email" ) }}
+                            {{ form_helper.render_field_checkbox(form.subscribed, label_text="Subscribe to email notifications") }}
                             <select class="form-control hidden" id="locale" name="locale"><option selected="" value="en">English</option></select>
                             <div class="pull-right form-actions" role="group">
                                 <a href="{{ url_for('account.update_profile', name=current_user.name) }}" class="btn btn-default">{{ _('Cancel') }}</a>
