--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -107,17 +107,15 @@
 {% endmacro %}
 
 {% macro render_field_checkbox(field, tooltip, label_text) %}
-    <div class="row">
-        <div class="col-xs-12">
-            {% if tooltip %}
-                <label class="checkbox-inline">
-                    {{field(**kwargs)}} {{label_text}}
-                </label>
-            {% else %}
-                <label class="checkbox-inline">
-                    {{field(**kwargs)}} {{label_text}}
-                </label>
-            {% endif %}
-        </div>
+    <div class="form-group">
+        {% if tooltip %}
+            <label class="checkbox-inline">
+                {{field(**kwargs)}} {{label_text}}
+            </label>
+        {% else %}
+            <label class="checkbox-inline">
+                {{field(**kwargs)}} {{label_text}}
+            </label>
+        {% endif %}
     </div>
 {% endmacro %}
